[gd_scene load_steps=13 format=3 uid="uid://bvsma6lhspo3j"]

[ext_resource type="Texture2D" uid="uid://cxrw8p8vugx4c" path="res://Sprites/enemy_rpg.png" id="1_a5kyl"]
[ext_resource type="Script" path="res://Scripts/enemies/enemy.gd" id="1_nej8s"]
[ext_resource type="Shader" path="res://Shaders/hurt.gdshader" id="1_ugak3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ctf1t"]
shader = ExtResource("1_ugak3")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iancm"]
radius = 8.0

[sub_resource type="Animation" id="Animation_lj5bu"]
resource_name = "Move_right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteEnemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_hgjdh"]
resource_name = "Move_left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteEnemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_dgpnl"]
resource_name = "Move_down"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteEnemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_pfjwp"]
resource_name = "Move_up"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteEnemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_ypiow"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteEnemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t3550"]
_data = {
"Move_down": SubResource("Animation_dgpnl"),
"Move_left": SubResource("Animation_hgjdh"),
"Move_right": SubResource("Animation_lj5bu"),
"Move_up": SubResource("Animation_pfjwp"),
"RESET": SubResource("Animation_ypiow")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_kiyjc"]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_nej8s")

[node name="SpriteEnemy" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ctf1t")
texture = ExtResource("1_a5kyl")
hframes = 5
vframes = 4
frame = 1

[node name="CollisionShapeEnemy" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_iancm")

[node name="AnimationEnemy" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t3550")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_kiyjc")
debug_color = Color(0.976621, 0, 0.41045, 0.42)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
